import { afterEach, describe, expect, jest, test } from "@jest/globals";
import { existsSync, readFileSync } from "node:fs";
import { cp, rm, writeFile } from "node:fs/promises";
import path from "path";
import { cli, cliSnapshot, useTempFixtures } from "./helpers";

const fixturesDir = path.join(import.meta.dirname, "generate");

describe("generate candid", () => {
  jest.setTimeout(120_000);

  const tempDirs: string[] = [];

  async function makeTempFixture(fixture: string): Promise<string> {
    const src = path.join(fixturesDir, fixture);
    const dest = path.join(fixturesDir, `_tmp_${fixture}_${Date.now()}`);
    await cp(src, dest, { recursive: true });
    tempDirs.push(dest);
    return dest;
  }

  afterEach(async () => {
    for (const dir of tempDirs) {
      await rm(dir, { recursive: true, force: true });
    }
    tempDirs.length = 0;
  });

  test("default path: writes <main-dir>/<name>.did and sets [canisters.<name>].candid", async () => {
    const cwd = await makeTempFixture("basic");
    const tomlBefore = readFileSync(path.join(cwd, "mops.toml"), "utf-8");
    expect(tomlBefore).not.toMatch(/"src\/foo\.did"/);

    await cliSnapshot(["generate", "candid", "foo"], { cwd }, 0);

    const did = readFileSync(path.join(cwd, "src/foo.did"), "utf-8");
    expect(did).toMatchSnapshot("src/foo.did");

    const tomlAfter = readFileSync(path.join(cwd, "mops.toml"), "utf-8");
    expect(tomlAfter).toMatch(/candid\s*=\s*"src\/foo\.did"/);
  });

  test("configured path: overwrites in place and does not touch mops.toml", async () => {
    const cwd = await makeTempFixture("basic");
    const tomlBefore = readFileSync(path.join(cwd, "mops.toml"), "utf-8");
    const didBefore = readFileSync(path.join(cwd, "candid/bar.did"), "utf-8");
    expect(didBefore).toMatch(/Hand-curated/);

    await cliSnapshot(["generate", "candid", "bar"], { cwd }, 0);

    const didAfter = readFileSync(path.join(cwd, "candid/bar.did"), "utf-8");
    expect(didAfter).not.toMatch(/Hand-curated/);
    expect(didAfter).toMatch(/greet/);
    expect(readFileSync(path.join(cwd, "mops.toml"), "utf-8")).toBe(tomlBefore);
  });

  test("no canister names: processes all canisters", async () => {
    const cwd = await makeTempFixture("basic");
    await cliSnapshot(["generate", "candid"], { cwd }, 0);

    expect(existsSync(path.join(cwd, "src/foo.did"))).toBe(true);
    const barDid = readFileSync(path.join(cwd, "candid/bar.did"), "utf-8");
    expect(barDid).toMatch(/greet/);
    expect(barDid).not.toMatch(/Hand-curated/);
  });

  test("--output writes to the given path and does not touch mops.toml", async () => {
    const cwd = await makeTempFixture("basic");
    const outPath = path.join(cwd, "out/custom.did");
    const tomlBefore = readFileSync(path.join(cwd, "mops.toml"), "utf-8");

    const result = await cli(["generate", "candid", "foo", "-o", outPath], {
      cwd,
    });
    expect(result.exitCode).toBe(0);
    expect(existsSync(outPath)).toBe(true);
    expect(readFileSync(outPath, "utf-8")).toMatch(/call/);
    expect(existsSync(path.join(cwd, "src/foo.did"))).toBe(false);
    expect(readFileSync(path.join(cwd, "mops.toml"), "utf-8")).toBe(tomlBefore);
  });

  test("--output rejected with multiple canisters", async () => {
    const cwd = await makeTempFixture("basic");
    const result = await cli(
      ["generate", "candid", "foo", "bar", "-o", "x.did"],
      { cwd },
    );
    expect(result.exitCode).toBe(1);
    expect(result.stderr).toMatch(/single canister/i);
  });

  test("unknown canister name errors", async () => {
    const cwd = await makeTempFixture("basic");
    const result = await cli(["generate", "candid", "nope"], { cwd });
    expect(result.exitCode).toBe(1);
    expect(result.stderr).toMatch(/not found in mops\.toml/i);
  });

  test("moc failure: leaves destination and mops.toml untouched", async () => {
    const cwd = await makeTempFixture("error");
    const tomlBefore = readFileSync(path.join(cwd, "mops.toml"), "utf-8");

    const result = await cli(["generate", "candid", "broken"], { cwd });
    expect(result.exitCode).toBe(1);
    expect(result.stderr).toMatch(/Failed to generate Candid/);
    expect(existsSync(path.join(cwd, "src/broken.did"))).toBe(false);
    expect(readFileSync(path.join(cwd, "mops.toml"), "utf-8")).toBe(tomlBefore);
  });

  test("rejects destination inside .mops/", async () => {
    const cwd = await makeTempFixture("basic");
    const result = await cli(
      ["generate", "candid", "foo", "-o", ".mops/foo.did"],
      { cwd },
    );
    expect(result.exitCode).toBe(1);
    expect(result.stderr).toMatch(/\.mops\//);
    expect(result.stderr).toMatch(/Refusing/i);
  });

  test("creates file when [canisters.<name>].candid points to a missing path", async () => {
    const cwd = await makeTempFixture("basic");
    // bar's candid path points to candid/bar.did — delete it first
    await rm(path.join(cwd, "candid/bar.did"));

    const result = await cli(["generate", "candid", "bar"], { cwd });
    expect(result.exitCode).toBe(0);
    expect(existsSync(path.join(cwd, "candid/bar.did"))).toBe(true);
  });

  test("--output collision with another canister's candid prints a warning", async () => {
    const cwd = await makeTempFixture("basic");
    const result = await cli(
      ["generate", "candid", "foo", "-o", "candid/bar.did"],
      { cwd },
    );
    expect(result.exitCode).toBe(0);
    expect(result.stderr).toMatch(/collides with \[canisters\.bar\]\.candid/);
  });
});

describe("generate bindings", () => {
  jest.setTimeout(60_000);

  const makeTempFixture = useTempFixtures(fixturesDir);

  test("configured bindings: default out next to .did", async () => {
    const cwd = await makeTempFixture("bindings");
    await cliSnapshot(["generate", "bindings", "Ledger"], { cwd }, 0);

    const mo = readFileSync(path.join(cwd, "candid/Ledger.mo"), "utf-8");
    expect(mo).toMatch(/public type Self = actor/);
    expect(mo).toMatch(/icrc1_transfer/);
    expect(mo).toMatchSnapshot("candid/Ledger.mo");
  });

  test("configured out path is used", async () => {
    const cwd = await makeTempFixture("bindings");
    await cliSnapshot(["generate", "bindings", "CustomOut"], { cwd }, 0);
    expect(existsSync(path.join(cwd, "src/Custom.mo"))).toBe(true);
    expect(readFileSync(path.join(cwd, "src/Custom.mo"), "utf-8")).toMatch(
      /ping/,
    );
  });

  test("no names: generates all bindings", async () => {
    const cwd = await makeTempFixture("bindings");
    await cliSnapshot(["generate", "bindings"], { cwd }, 0);
    expect(existsSync(path.join(cwd, "candid/Ledger.mo"))).toBe(true);
    expect(existsSync(path.join(cwd, "src/Custom.mo"))).toBe(true);
  });

  test("ad-hoc .did with -o", async () => {
    const cwd = await makeTempFixture("bindings");
    const outPath = path.join(cwd, "out/AdHoc.mo");
    const result = await cli(
      ["generate", "bindings", "candid/ledger.did", "-o", outPath],
      { cwd },
    );
    expect(result.exitCode).toBe(0);
    expect(existsSync(outPath)).toBe(true);
    expect(readFileSync(outPath, "utf-8")).toMatch(/icrc1_balance_of/);
  });

  test("ad-hoc without -o errors", async () => {
    const cwd = await makeTempFixture("bindings");
    const result = await cli(["generate", "bindings", "candid/ledger.did"], {
      cwd,
    });
    expect(result.exitCode).toBe(1);
    expect(result.stderr).toMatch(/--output/i);
  });

  test("unknown binding name errors", async () => {
    const cwd = await makeTempFixture("bindings");
    const result = await cli(["generate", "bindings", "Nope"], { cwd });
    expect(result.exitCode).toBe(1);
    expect(result.stderr).toMatch(/not found in mops\.toml/i);
  });

  test("rejects destination inside .mops/", async () => {
    const cwd = await makeTempFixture("bindings");
    const result = await cli(
      ["generate", "bindings", "Ledger", "-o", ".mops/Ledger.mo"],
      { cwd },
    );
    expect(result.exitCode).toBe(1);
    expect(result.stderr).toMatch(/\.mops\//);
  });

  test("missing [bindings] errors with hint", async () => {
    const cwd = await makeTempFixture("basic");
    const result = await cli(["generate", "bindings"], { cwd });
    expect(result.exitCode).toBe(1);
    expect(result.stderr).toMatch(/No \[bindings\.\*\]/);
  });

  test("invalid candid errors without writing output", async () => {
    const cwd = await makeTempFixture("bindings");
    await writeFile(
      path.join(cwd, "candid/ledger.did"),
      "this is not candid {{{",
    );
    const result = await cli(["generate", "bindings", "Ledger"], { cwd });
    expect(result.exitCode).toBe(1);
    expect(result.stderr).toMatch(/Failed to generate Motoko bindings/);
    expect(existsSync(path.join(cwd, "candid/Ledger.mo"))).toBe(false);
  });

  test("import statements are rejected", async () => {
    const cwd = await makeTempFixture("bindings");
    await writeFile(
      path.join(cwd, "candid/ledger.did"),
      'import service "other.did";\nservice : { ping : () -> () query; }\n',
    );
    const result = await cli(["generate", "bindings", "Ledger"], { cwd });
    expect(result.exitCode).toBe(1);
    expect(result.stderr).toMatch(/import/i);
    expect(existsSync(path.join(cwd, "candid/Ledger.mo"))).toBe(false);
  });

  test("named binding with -o writes to given path", async () => {
    const cwd = await makeTempFixture("bindings");
    const outPath = path.join(cwd, "elsewhere/Ledger.mo");
    const result = await cli(
      ["generate", "bindings", "Ledger", "-o", outPath],
      { cwd },
    );
    expect(result.exitCode).toBe(0);
    expect(existsSync(outPath)).toBe(true);
    expect(existsSync(path.join(cwd, "candid/Ledger.mo"))).toBe(false);
  });

  test("--output with multiple binding names errors", async () => {
    const cwd = await makeTempFixture("bindings");
    const result = await cli(
      ["generate", "bindings", "Ledger", "CustomOut", "-o", "x.mo"],
      { cwd },
    );
    expect(result.exitCode).toBe(1);
    expect(result.stderr).toMatch(/single binding/i);
  });

  test("ad-hoc works without mops.toml", async () => {
    const cwd = await makeTempFixture("bindings");
    await rm(path.join(cwd, "mops.toml"));
    const outPath = path.join(cwd, "out/NoToml.mo");
    const result = await cli(
      ["generate", "bindings", "candid/ledger.did", "-o", outPath],
      { cwd },
    );
    expect(result.exitCode).toBe(0);
    expect(existsSync(outPath)).toBe(true);
  });
});
